--- a/app/templates/Article1.html
+++ b/app/templates/Article1.html
@@ -26,7 +26,7 @@
         crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html"><img src="{{ url_for('static', filename='images/logo.jpg') }}"
+    <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}"
                                                    class="img-responsive" alt="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
