--- a/app/templates/SoC.html
+++ b/app/templates/SoC.html
@@ -18,7 +18,7 @@
 
 <div class="header">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-0">
-    <a class="navbar-brand" href="index.html"><img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="logo" class="img-responsive" ></a>
+    <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="logo" class="img-responsive" ></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
