--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,8 @@
 <body>
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-0">
-        <a class="navbar-brand" href="/"> Home </a>
+        <a class="navbar-brand" href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}"
+                                                   class="img-responsive" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
